--- a/app/src/main/res/layout/view_list_row.xml
+++ b/app/src/main/res/layout/view_list_row.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardview"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -13,39 +14,44 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/linearLayout">
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_margin="1dp"
-            android:background="#ffffff"
-            android:scaleType="centerCrop" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:background="#ffffff"
+            android:scaleType="centerCrop"
+            tools:layout_conversion_absoluteHeight="150dp"
+            tools:layout_editor_absoluteY="1dp"
+            tools:layout_editor_absoluteX="1dp"
+            tools:layout_conversion_absoluteWidth="397dp" />
+
+
 
             <TextView
                 android:id="@+id/text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
                 android:textColor="#263238"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                tools:layout_conversion_absoluteHeight="27dp"
+                tools:layout_editor_absoluteY="160dp"
+                tools:layout_editor_absoluteX="8dp"
+                tools:layout_conversion_absoluteWidth="0dp" />
 
             <TextView
                 android:id="@+id/desc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
                 android:maxLines="3"
                 android:textColor="#546E7A"
-                android:textSize="16sp" />
-        </LinearLayout>
+                android:textSize="16sp"
+                tools:layout_conversion_absoluteHeight="21dp"
+                tools:layout_editor_absoluteY="188dp"
+                tools:layout_editor_absoluteX="8dp"
+                tools:layout_conversion_absoluteWidth="0dp" />
+
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
